fixed a bug that caused the characteristics and stat elements to have a scrollbar on the desktop version.

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ body {
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 700px) {
   .characteristics {
     overflow: scroll;
   }
